--- a/Taller1/figuras.css
+++ b/Taller1/figuras.css
@@ -64,10 +64,31 @@ header p {
 
 .calculator-triangle {
 	background-color: #4db6ac;
+	position: relative;
+}
+
+.calculator-triangle-isosceles {
+	background-color: #4fc3f7;
+	position: relative;
+	display: none;
 }
 
 .calculator-circle {
 	background-color: #ffb74d;
+}
+
+.turn-triangle {
+	position: absolute;
+	bottom: 7px;
+	right: 7px;
+	height: 30px;
+	width: 30px;
+	cursor: pointer;
+	content: url('https://api.iconify.design/ic/baseline-change-circle.svg?color=white');
+}
+
+.turn-triangle:hover {
+	content: url('https://api.iconify.design/ic/outline-change-circle.svg?color=white');
 }
 
 .calculator-title {
@@ -135,8 +156,10 @@ header p {
 .form-circle input {
 	grid-column: 1 / 3;
 	text-align: center;
-	width: 160px;
-	margin: auto;
+}
+
+#baseTriangleIsosceles {
+	grid-column: 1 / 3;
 }
 
 .btn {
@@ -158,6 +181,8 @@ header p {
 	align-self: center;
 	font-weight: 900;
 	font-size: 2rem;
+	text-decoration: wavy;
+	text-align: center;
 }
 
 @media (min-width: 800px) {
